improve card handling with fix for overflow text

--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ button {
 .cardlist {
     margin-right: 20px;
     display: grid; 
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 15px;
     align-items:start;
 }
@@ -164,6 +164,11 @@ button {
 
 .card > p {
     font-size: smaller;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .actionIcons {
